temparary disable image gallery

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
 
         <!-- Memory Gallery -->
-        <div id="memory-gallery" class="hidden grid grid-cols-1 md:grid-cols-3 gap-4 max-w-4xl mx-auto mb-8">
+<!--         <div id="memory-gallery" class="hidden grid grid-cols-1 md:grid-cols-3 gap-4 max-w-4xl mx-auto mb-8">
             <!-- Images will be added via JavaScript -->
-        </div>
+        </div> -->
 
         <!-- Final Question -->
         <div id="final-question" class="hidden text-center glass-effect p-8 rounded-lg">
