--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </div>
 
         <!-- Memory Gallery -->
-
+        <div id="memory-gallery" class="hidden grid grid-cols-1 md:grid-cols-3 gap-4 max-w-4xl mx-auto mb-8"></div>
+            <!-- Images will be added via JavaScript -->
+        </div>
+        
         <!-- Final Question -->
         <div id="final-question" class="hidden text-center glass-effect p-8 rounded-lg">
             <h2 class="text-3xl md:text-4xl font-bold text-pink-600 mb-6">Will you be my girlfriend?</h2>
